# hrw_scheduling_project

./: .gitignore  CMakeLists.txt  QT_BUGFIX  README.md
docs/: build_run.md  design.md  doxygen.md
src/: main.cpp
src/model/: ExecutionSlice.h  Process.h  SimulationConfig.h  SimulationResult.h  ThreadInfo.h
src/scheduler/: FCFSScheduler.cpp  FCFSScheduler.h  IScheduler.h  PriorityRoundRobinScheduler.cpp  PriorityRoundRobinScheduler.h  RoundRobinScheduler.cpp  RoundRobinScheduler.h  SJFScheduler.cpp  SJFScheduler.h  SchedulerFactory.cpp  SchedulerFactory.h
src/simulation/: Metrics.h  ReadyQueueItem.h  Simulator.cpp  Simulator.h
src/ui/: GanttWidget.cpp  GanttWidget.h  MainWindow.cpp  MainWindow.h
